base/fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timetable-planner-fe-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: timetable-planner-fe
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: timetable-planner-fe
    spec:
      containers:
        - name: timetable-planner-fe
          image: scgskku/timetable-planner-fe
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
