base/fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timetable-planner-fe-service
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/name: timetable-planner-fe
