base/fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timetable-planner-fe-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-clusterissuer"
spec:
  tls:
    - hosts:
        - skkedule.scg.skku.ac.kr
      secretName: timetable-planner-fe-tls
  rules:
    - host: skkedule.scg.skku.ac.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timetable-planner-fe-service
                port:
                  number: 80
